# cool_api

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  RATE_LIMITING.md  RATE_LIMITING_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml  pricing.json  test_rate_limiting.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_seed.sql  0003_api_key_group.sql  0004_cache_settings.sql  0005_stage7_seed.sql  0006_cache_write_price.sql  0007_request_log_ip_key.sql  0008_precision_upgrade.sql  0009_user_group_overrides.sql  0010_groups_provider.sql  0011_api_key_plaintext.sql  0012_landing_pricing_per_provider.sql  0013_landing_pricing_groups_array.sql  0014_channel_probes.sql  001_create_users.sql  002_create_provider_keys.sql  003_create_channels.sql  004_create_relay_keys.sql  005_create_request_logs.sql  006_create_billing.sql  007_create_settings.sql  008_create_model_pricing.sql  009_alter_model_pattern_to_text.sql  010_create_pricing_groups.sql  011_add_remark_to_relay_keys.sql  012_add_cache_tokens.sql  013_harden_constraints_and_indexes.sql  014_add_user_rpm_limit.sql  015_add_user_display_name.sql  016_add_user_referrals.sql
backend/src/: bootstrap.rs  config.rs  config_helper.rs  crypto.rs  db.rs  error.rs  main.rs  redis_client.rs
backend/src/auth/: extractors.rs  jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/middleware/: mod.rs  rate_limiter.rs
backend/src/models/: api_key.rs  billing.rs  channel.rs  group.rs  mod.rs  model.rs  pricing.rs  pricing_group.rs  provider_key.rs  relay_key.rs  request_log.rs  top_up.rs  user.rs
backend/src/relay/: dispatcher.rs  mod.rs  streaming.rs  token_counter.rs
backend/src/relay/providers/: claude.rs  gemini.rs  mod.rs  openai.rs
backend/src/repo/: api_keys.rs  channel_probes.rs  channels.rs  groups.rs  mod.rs  models.rs  request_logs.rs  system_settings.rs  top_up_records.rs  user_groups.rs  users.rs
backend/src/routes/: anthropic.rs  auth.rs  health.rs  mod.rs  payment.rs  public.rs  shared.rs  v1.rs
backend/src/routes/admin/: auth.rs  billing.rs  cache.rs  channels.rs  groups.rs  keys.rs  mod.rs  models.rs  pricing.rs  probes.rs  settings.rs  stats.rs  tokens.rs  users.rs
backend/src/routes/client/: billing.rs  keys.rs  mod.rs  profile.rs  usage.rs
backend/src/services/: billing.rs  cache.rs  email.rs  email_codes.rs  epay.rs  forwarding.rs  mod.rs  pricing_oracle.rs  prober.rs  router.rs
backend/src/upstream/: anthropic.rs  mod.rs  openai.rs
backend/tests/: mock_openai.py
(+121 files in other folders)
